# git-simple-encrypt

./: .gitattributes  .gitignore  .taplo.toml  AGENTS.md  COMMIT_MSG.tmp  Cargo.toml  README.md  git_simple_encrypt.toml  readme.md
.github/: dependabot.yml  mergify.yml
.github/workflows/: publish.yml  release.yml  test.yaml
docs/: README_zh-CN.md
src/: cli.rs  config.rs  crypt.rs  error.rs  git_command.rs  lib.rs  main.rs  repo.rs  salt_cache.rs  utils.rs
src/crypt/: batch.rs  file.rs  header.rs  key.rs  mod.rs  repo.rs  stream.rs  tests.rs
src/git_command/: binding.rs  config.rs  manual_craft.rs  mod.rs
src/utils/: mod.rs  pathutils.rs  progress.rs  style.rs
tests/: intergration_test.rs
