[package]
authors     = ["lxl66566 <lxl66566@gmail.com>"]
categories  = ["cryptography"]
description = "Encrypt/decrypt files in git repo using one password"
edition     = "2024"
homepage    = "https://github.com/lxl66566/git-simple-encrypt"
keywords    = ["git", "encryption"]
license     = "MIT"
name        = "git-simple-encrypt"
readme      = "./README.md"
repository  = "https://github.com/lxl66566/git-simple-encrypt"
version     = "1.5.0"

[dependencies]
aes-gcm-siv       = "0.11.1"
anyhow            = "1.0"
assert2           = "0.3"
clap              = { version = "4.5", features = ["derive"] }
colored           = "3"
config-file2      = "0.4.1"
const-str         = "1.1"
copy-metadata     = "0.1.0"
log               = "0.4"
path-absolutize   = "3"
pathdiff          = "0.2"
pretty_env_logger = "0.5"
rayon             = "1"
serde             = { version = "1", features = ["derive"] }
sha3              = "0.10"
tap               = "1"
walkdir           = "2"
zstd              = "0.13.3"

[target.'cfg(target_arch = "aarch64")'.dependencies]
libz-sys = { version = "1.1.23", features = ["static"] }

[dev-dependencies]
rand     = { version = "0.9.2", features = ["small_rng"] }
tempfile = "3.24.0"

[[bin]]
name = "git-se"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[profile.release]
lto       = true
opt-level = "z"
panic     = "abort"
strip     = true
