[package]
authors     = ["lxl66566 <lxl66566@gmail.com>"]
categories  = ["cryptography"]
description = "Encrypt/decrypt files in your git repo using only one password"
edition     = "2024"
homepage    = "https://github.com/lxl66566/git-simple-encrypt"
keywords    = ["git", "encryption"]
license     = "MIT"
name        = "git-simple-encrypt"
readme      = "./README.md"
repository  = "https://github.com/lxl66566/git-simple-encrypt"
version     = "3.0.0"

[dependencies]
anyhow            = "1.0"
argon2            = "0.5.3"
assert2           = "0.4"
blake3            = "1"
chacha20poly1305  = "0.10.1"
clap              = { version = "4.6", features = ["derive"] }
colored           = "3"
config-file2      = "0.4.1"
const-str         = "1"
copy-metadata     = "0.2.0"
dashmap           = "6.1.0"
fuck-backslash    = "0.1.0"
ignore            = { version = "0.4.25", features = ["simd-accel"] }
indicatif         = "0.18"
log               = "0.4"
memmap2           = "0.9"
path-absolutize   = "3"
pathdiff          = "0.2"
pretty_env_logger = "0.5"
rand              = "0.10"
rayon             = "1"
rkyv              = "0.8"
serde             = { version = "1", features = ["derive"] }
tap               = "1"
tempfile          = "3.26.0"
zeroize           = "1.8.2"
zstd              = "0.13.3"

[[bin]]
name = "git-se"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[profile.release]
lto       = true
opt-level = "s"
panic     = "abort"
strip     = true
