[package]
authors      = ["lxl66566 <lxl66566@gmail.com>"]
categories   = ["cryptography"]
description  = "Encrypt/decrypt files in your git repo using only one password"
edition      = "2024"
exclude      = [".github"]
homepage     = "https://github.com/lxl66566/git-simple-encrypt"
keywords     = ["git", "encryption"]
license      = "MIT"
name         = "git-simple-encrypt"
readme       = "./README.md"
repository   = "https://github.com/lxl66566/git-simple-encrypt"
rust-version = "1.85"
version      = "3.0.1"

[features]
default = ["bin", "progress", "colored"]
## Enable the `git-se` binary: CLI parsing (`clap`) and logger initialization
## (`pretty_env_logger`). Disable for a leaner library-only build.
bin = ["dep:clap", "dep:pretty_env_logger"]
## Colored terminal output using `colored` crate. Disable for environments
## that do not support ANSI escape codes (e.g. CI logs, GUI apps).
colored = ["dep:colored"]
## Use `indicatif` progress bars during repo-wide encrypt/decrypt/check. When
## disabled, progress is reported via plain `log`/`println!` instead.
progress = ["dep:indicatif"]

[dependencies]
argon2            = "0.5.3"
blake3            = "1"
chacha20poly1305  = "0.10.1"
clap              = { version = "4.6", optional = true, features = ["derive"] }
colored           = { version = "3", optional = true }
config-file2      = "0.5"
const-str         = "1"
copy-metadata     = "0.3.0"
dashmap           = "6.1.0"
fuck-backslash    = "0.1.0"
ignore            = { version = "0.4.25", features = ["simd-accel"] }
indicatif         = { version = "0.18", optional = true }
log               = "0.4"
memmap2           = "0.9"
parking_lot       = "0.12.5"
path-absolutize   = "3"
pathdiff          = "0.2"
pretty_env_logger = { version = "0.5", optional = true }
rand              = "0.10"
rayon             = "1"
rkyv              = "0.8"
serde             = { version = "1", features = ["derive"] }
tempfile          = "3.26.0"
thiserror         = "2.0.18"
zeroize           = "1.9"
zstd              = "0.13.3"

[dev-dependencies]
anyhow    = "1.0"
assert2   = "0.4"
colored   = "3"
criterion = "0.8.2"
tap       = "1"
tempfile  = "3.26.0"

[[bin]]
name              = "git-se"
path              = "src/main.rs"
required-features = ["bin"]

[lib]
path = "src/lib.rs"

[profile.release]
lto       = true
opt-level = "s"
panic     = "abort"
strip     = true
